manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: troubleshooting-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  # 사번으로 변경하세요
  - host: tr-82109931.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: troubleshooting
            port:
              number: 8080
        pathType: Prefix
